--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/jpg" href="images/icon.jpg">
+		<link rel="icon" type="image/JPG" href="images/icon.JPG">
 	<head>
 
 	<body>
@@ -30,7 +30,7 @@
 		My favorite Video
 		</a>
 		<br><br>
-		<img src="images/okay.jpg" width="200" height="266" alt="my ugly mug" title="my ugly mug">
+		<img src="images/okay.JPG" width="200" height="266" alt="my ugly mug" title="my ugly mug">
 	</div>
 	</body>
 </html>
